--- a/style.css
+++ b/style.css
@@ -95,10 +95,6 @@ header h1 {
     display: none;
 }
 
-.correct {
-  background-color: rgb(0, 255, 72) !important;
-}
-
 .incorrect {
-  background-color: rgb(255, 0, 0);
+  display: none;
 }
