--- a/style.css
+++ b/style.css
@@ -135,10 +135,12 @@ color: #ffff;
 .correct{
   background-color: #86dd92 !important;
   color: #ffff !important;
-  box-shadow: 0 5px 10px rgba(72, 221, 121, 0.843);
+  border: #86dd92 !important;
+  box-shadow: 0 5px 10px rgba(72, 221, 121, 0.843) !important;
 }
 .incorrect {
  background-color:#ff0000 !important;
+ border: none!important;
  color: #ffff !important;
  box-shadow: 0 5px 10px rgba(198, 24, 24, 0.934) !important;
 }
@@ -151,3 +153,7 @@ color: #ffff;
   
 }
 
+.disabled-option {
+  opacity: 0.5;
+  pointer-events: none;
+}
